--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.1",
+    "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
     "mongoose": "^5.10.10",
     "swagger-ui-express": "4.1.2",
