--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
+JWT_SECRET_KEY=Zxcvb12345!@#$$&
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://Kuzyaka:Ksv251086@cluster0.nbbpb.mongodb.net/rsschool?retryWrites=true&w=majority
